--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "aws-amplify": "^1.2.2",
     "react": "^16.10.2",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.10.2",
+    "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.2.0"
   },
